compiler/testData/multiplatform/classScopes/missingFunction/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/missingFunction/jvm.kt:1:14: error: in class 'Foo' expected members have no actual ones:

    public final expect fun function(s: String): Unit

actual class Foo
             ^
